Set inn efni í index.html

--- a/index.html
+++ b/index.html
@@ -4,5 +4,67 @@
 	<meta charset="utf-8">
 	</head>
 	<body>
+		<div class="header">
+			<a href="index.html"> Fooþjónustan </a>
+			<a href="um.html"> Um </a>
+			<a href="kaupa.html"> Kaupa </a>
+		</div>
+		<div class="photowithtext">
+			<img src="bg.jpg" alt="">
+			Í fyrsta skipti á Íslandi
+			Fooþjónustan
+			<a href="kaupa.html"> Kaupa </a>
+		</div>
+
+		<div class="comments">
+			<div class="comments comments__comment">
+				<h3 class="comment comment__header"> Ódýr og góð þjónusta </h3>
+				<p class="comment comment__p"> Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara. </p>
+			</div>
+			<div class="comments comments__comment">
+				<h3 class="comment comment__header"> Þægilegt í amstri dagsins </h3>
+				<p class="comment comment__p"> Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar. </p>
+			</div>
+			<div class="comments comments__comment">
+				<h3 class="comment comment__header"> Nauðsynlegt á hvert heimili </h3>
+				<p class="comment comment__p"> Hvort sem er fyrir einstaklinga eða stórfjölskyldur. </p>
+			</div>
+		</div>
+
+		<div class="ummaeli">
+			<div class="ummaeli ummaeli__single">
+				<img src="profile1.jpg" alt="">
+				„Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“
+				Anna Jóns
+				Áskrifandi í þrjá mánuði
+			</div>
+			<div class="ummaeli ummaeli__single">
+				<img src="profile2.jpg" alt="">
+				„Vá, þetta breytir öllu!“
+				Siggi Páls
+				Áskrifandi í tvo daga
+			</div>
+			<div class="ummaeli ummaeli__single">
+				<img src="profile3.jpg" alt="">
+				„A+++, mun aldrei hætta í áskrift“
+				Jón Guðrúnarson
+				Áskrifandi í ár
+			</div>
+		</div>
+
+		<div class="buy">
+			Eftir hverju ert þú að bíða?
+
+			<a href="kaupa.html"> Kaupa </a>
+		</div>
+
+		<div class="footer">
+			Fooþjónustan
+			123-4567
+			Opið 12-13 alla daga
+			Bargata 1
+			900 Foobar
+			© Fooþjónustan 2017
+		</div>
 	</body>
 </html>
