--- a/um.html
+++ b/um.html
@@ -4,5 +4,10 @@
 	<meta charset="utf-8">
 	</head>
 	<body>
+		<div class="header">
+			<a href="index.html"> Fooþjónustan </a>
+			<a href="um.html"> Um </a>
+			<a href="kaupa.html"> Kaupa </a>
+		</div>
 	</body>
 </html>
