gera meira css í forsíðu

--- a/gogn/index.html
+++ b/gogn/index.html
@@ -18,49 +18,75 @@
 			Fooþjónustan
 			<a href="kaupa.html"> Kaupa </a>
 		</div>
-		<div>
-			<div class="comments">
-				<div class="comments comments__comment">
-					<img src="photos\check.svg">
-					<h3 class="comment comment__header"> Ódýr og góð þjónusta </h3>
-					<p class="comment comment__p"> Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara. </p>
-				</div>
-				<div class="comments comments__comment">
-					<img src="photos\check.svg">
-					<h3 class="comment comment__header"> Þægilegt í amstri dagsins </h3>
-					<p class="comment comment__p"> Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar. </p>
-				</div>
-				<div class="comments comments__comment">
-					<img src="photos\check.svg">
-					<h3 class="comment comment__header"> Nauðsynlegt á hvert heimili </h3>
-					<p class="comment comment__p"> Hvort sem er fyrir einstaklinga eða stórfjölskyldur. </p>
-				</div>
-			</div>
-			<img src="photos\image.jpg">
-		</div>
+
 		<div class="row">
 
+			<div class="col col-6">
+				<div class="comment">
+					<img src="photos\check.svg" class="checkbox">
+					<strong class="comment comment-header">
+						Ódýr og góð þjónusta
+					</strong>
+					<div class="comment comment-p">
+						Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
+					</div>
+				</div>
+				<div class="comment">
+					<img src="photos\check.svg" class="checkbox">
+					<strong class="comment comment-header">
+						Þægilegt í amstri dagsins
+					</strong>
+					<div class="comment comment-p">
+						Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
+					</div>
+				</div>
+				<div class="comment">
+					<img src="photos\check.svg" class="checkbox">
+					<strong class="comment comment-header">
+						Nauðsynlegt á hvert heimili
+					</strong>
+					<div class="comment comment-p">
+						Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
+					</div>
+				</div>
+			</div>
+			<div class="col col-6">
+				<img src="photos\image.jpg" alt="" class="image">
+			</div>
 			<div class="col col-4">
-				<img src="photos\profile1.jpg" alt="" class="profile">
-				„Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“
-				Anna Jóns
-				Áskrifandi í þrjá mánuði
+			</div>
+			<div class="col col-4">
+			</div>
+			<div class="col col-4">
 			</div>
 
-			<div class="col col-4">
-				<img src="photos\profile2.jpg" alt="" class="profile">
-				„Vá, þetta breytir öllu!“
-				Siggi Páls
-				Áskrifandi í tvo daga
-			</div>
-
-			<div class="col col-4">
-				<img src="photos\profile3.jpg" alt="" class="profile">
-				„A+++, mun aldrei hætta í áskrift“
-				Jón Guðrúnarson
-				Áskrifandi í ár
-			</div>
 		</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 		<div class="buy">
 			Eftir hverju ert þú að bíða?
