Laga til forsíðu

--- a/gogn/index.html
+++ b/gogn/index.html
@@ -1,106 +1,133 @@
 <!doctype html>
 <html lang="is">
-	<head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="styles.css">
-	</head>
-	<body>
-		<div class="header">
-			<a href="index.html"> Fooþjónustan </a>
-			<a href="um.html"> Um </a>
-			<a href="kaupa.html"> Kaupa </a>
-		</div>
-		<div class="photowithtext">
-			<div class="col col-12">
-				<img src="photos\bg.jpg" alt="">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Foo Þjónusta</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <main>
+			<div class="header">
+				<a href="index.html"> Fooþjónustan </a>
+				<a href="um.html"> Um </a>
+				<a href="kaupa.html"> Kaupa </a>
 			</div>
-			Í fyrsta skipti á Íslandi
-			Fooþjónustan
-			<a href="kaupa.html"> Kaupa </a>
-		</div>
 
-		<div class="row">
-
-			<div class="col col-6">
-				<div class="comment">
-					<img src="photos\check.svg" class="checkbox">
-					<strong class="comment comment-header">
-						Ódýr og góð þjónusta
-					</strong>
-					<div class="comment comment-p">
-						Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
+			<section>
+				<div class="row">
+					<div class="col col-6">
+						<div class="desc">
+							<div class="desc desc-image">
+								<img src="photos\check.svg">
+							</div>
+							<div class="desc desc-content">
+								<strong class="desc desc-header">
+									Ódýr og góð þjónusta
+								</strong>
+								<p class="desc desc-text">
+									Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
+								</p>
+							</div>
+						</div>
+						<div class="desc">
+							<div class="desc desc-image">
+								<img src="photos\check.svg">
+							</div>
+							<div class="desc desc-content">
+								<strong class="desc desc-header">
+									Þægilegt í amstri dagsins
+								</strong>
+								<p class="desc desc-text">
+									Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
+								</p>
+							</div>
+						</div>
+						<div class="desc">
+							<div class="desc desc-image">
+								<img src="photos\check.svg">
+							</div>
+							<div class="desc desc-content">
+								<strong class="desc desc-header">
+									Nauðsynlegt á hvert heimili
+								</strong>
+								<p class="desc desc-text">
+									Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col col-6">
+						<img src="photos\image.jpg">
 					</div>
 				</div>
-				<div class="comment">
-					<img src="photos\check.svg" class="checkbox">
-					<strong class="comment comment-header">
-						Þægilegt í amstri dagsins
-					</strong>
-					<div class="comment comment-p">
-						Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
+			</section>
+
+			<section>
+
+				<div class="row">
+
+					<div class="col col-4">
+						<div class="comment">
+							<div class="comment comment-image">
+								<img src="photos\profile1.jpg" class="comment comment-img">
+							</div>
+							<div class="comment comment-content">
+								<p class="comment comment-text">
+									„Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“
+								</p>
+								<p class="comment comment-author">
+									Anna Jóns
+								</p>
+								<p class="comment comment-about">
+									Áskrifandi í þrjá mánuði
+								</p>
+							</div>
+						</div>
 					</div>
-				</div>
-				<div class="comment">
-					<img src="photos\check.svg" class="checkbox">
-					<strong class="comment comment-header">
-						Nauðsynlegt á hvert heimili
-					</strong>
-					<div class="comment comment-p">
-						Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
+
+					<div class="col col-4">
+						<div class="comment">
+							<div class="comment comment-image">
+								<img src="photos\profile2.jpg" class="comment comment-img">
+							</div>
+							<div class="comment comment-content">
+								<p class="comment comment-text">
+									„Vá, þetta breytir öllu!“
+								</p>
+								<p class="comment comment-author">
+									Siggi Páls
+								</p>
+								<p class="comment comment-about">
+									Áskrifandi í tvo daga
+								</p>
+							</div>
+						</div>
 					</div>
+
+					<div class="col col-4">
+						<div class="comment">
+							<div class="comment comment-image">
+								<img src="photos\profile3.jpg" class="comment comment-img">
+							</div>
+							<div class="comment comment-content">
+								<p class="comment comment-text">
+									„A+++, mun aldrei hætta í áskrift“
+								</p>
+								<p class="comment comment-author">
+									Jón Guðrúnarson
+								</p>
+								<p class="comment comment-about">
+									Áskrifandi í ár
+								</p>
+							</div>
+						</div>
+					</div>
+
 				</div>
-			</div>
-			<div class="col col-6">
-				<img src="photos\image.jpg" alt="" class="image">
-			</div>
-			<div class="col col-4">
-			</div>
-			<div class="col col-4">
-			</div>
-			<div class="col col-4">
-			</div>
 
-		</div>
+			</section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-		<div class="buy">
-			Eftir hverju ert þú að bíða?
-
-			<a href="kaupa.html"> Kaupa </a>
-		</div>
-
-		<div class="footer">
-			Fooþjónustan
-			123-4567
-			Opið 12-13 alla daga
-			Bargata 1
-			900 Foobar
-			© Fooþjónustan 2017
-		</div>
-	</body>
+    </main>
+  </body>
 </html>
