--- a/gogn/index.html
+++ b/gogn/index.html
@@ -9,9 +9,9 @@
   <body>
     <main>
 			<div class="header">
-				<a href="index.html"> Fooþjónustan </a>
-				<a href="um.html"> Um </a>
-				<a href="kaupa.html"> Kaupa </a>
+				<a href="index.html"> <button class="button"> Fooþjónustan </button> </a>
+				<a href="um.html"><button class="button"> Um </button> </a>
+				<a href="kaupa.html"> <button class="button"> Kaupa </button> </a>
 			</div>
 
 			<section>
