--- a/gogn/kaupa.html
+++ b/gogn/kaupa.html
@@ -2,12 +2,13 @@
 <html lang="is">
 	<head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 		<div class="header">
-			<a href="index.html"> Fooþjónustan </a>
-			<a href="um.html"> Um </a>
-			<a href="kaupa.html"> Kaupa </a>
+			<a href="index.html"> <button class="button"> Fooþjónustan </button> </a>
+			<a href="um.html"><button class="button"> Um </button> </a>
+			<a href="kaupa.html"> <button class="button"> Kaupa </button> </a>
 		</div>
 	</body>
 </html>
