--- a/gogn/index.html
+++ b/gogn/index.html
@@ -19,12 +19,12 @@
 					<div class="col col-6">
 						<div class="desc">
 							<div class="desc desc-image">
-								<img src="photos\check.svg">
+								<img src="photos\check.svg" class="desc desc-img">
 							</div>
 							<div class="desc desc-content">
-								<strong class="desc desc-header">
+								<p class="desc desc-header">
 									Ódýr og góð þjónusta
-								</strong>
+								</p>
 								<p class="desc desc-text">
 									Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
 								</p>
@@ -32,12 +32,12 @@
 						</div>
 						<div class="desc">
 							<div class="desc desc-image">
-								<img src="photos\check.svg">
+								<img src="photos\check.svg" class="desc desc-img">
 							</div>
 							<div class="desc desc-content">
-								<strong class="desc desc-header">
+								<p class="desc desc-header">
 									Þægilegt í amstri dagsins
-								</strong>
+								</p>
 								<p class="desc desc-text">
 									Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
 								</p>
@@ -45,12 +45,12 @@
 						</div>
 						<div class="desc">
 							<div class="desc desc-image">
-								<img src="photos\check.svg">
+								<img src="photos\check.svg" class="desc desc-img">
 							</div>
 							<div class="desc desc-content">
-								<strong class="desc desc-header">
+								<p class="desc desc-header">
 									Nauðsynlegt á hvert heimili
-								</strong>
+								</p>
 								<p class="desc desc-text">
 									Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
 								</p>
@@ -127,6 +127,21 @@
 				</div>
 
 			</section>
+
+      <section>
+
+        <div class="row">
+
+          <div class="col col-12">
+            <div class="eitthvað">
+              <p> Eftir hverju er þú að bíða? </p>
+              <button class="button"> Kaupa </button>
+            </div>
+          </div>
+
+        </div>
+
+      </section>
 
     </main>
   </body>
