--- a/gogn/index.html
+++ b/gogn/index.html
@@ -8,11 +8,26 @@
   </head>
   <body>
     <main>
-			<div class="header">
-				<a href="index.html"> <button class="button"> Fooþjónustan </button> </a>
-				<a href="um.html"><button class="button"> Um </button> </a>
-				<a href="kaupa.html"> <button class="button"> Kaupa </button> </a>
-			</div>
+      <div class="row">
+        <div class="col col-12">
+    			<div class="header">
+    				<a href="index.html"> <button class="button"> Fooþjónustan </button> </a>
+    				<a href="um.html"><button class="button"> Um </button> </a>
+    				<a href="kaupa.html"> <button class="button"> Kaupa </button> </a>
+    			</div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col col-12">
+          <div class="frontpage">
+            <p class="frontpage frontpage-text"> Í fyrsta skipti á Íslandi </p>
+            <h2 class="frontpage frontpage-header"> Fooþjónustan </h2>
+            <a  href="kaupa.html"> <button class="button"> Kaupa </button> </a>
+          </div>
+        </div>
+      </div>
+
 
 			<section>
 				<div class="row">
