Laga takkann í fót á index.html

--- a/gogn/index.html
+++ b/gogn/index.html
@@ -150,7 +150,7 @@
           <div class="col col-12">
             <div class="eitthvað">
               <p> Eftir hverju er þú að bíða? </p>
-              <button class="button"> Kaupa </button>
+              <a href="kaupa.html"> <button class="button"> Kaupa </button> </a>
             </div>
           </div>
 
