Breyta header í index.html skoðið https://www.w3schools.com/css/css_navbar.asp

--- a/gogn/index.html
+++ b/gogn/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col col-12">
     			<div class="header">
     				<a href="index.html"> <button class="button"> Fooþjónustan </button> </a>
@@ -16,7 +16,13 @@
     				<a href="kaupa.html"> <button class="button"> Kaupa </button> </a>
     			</div>
         </div>
-      </div>
+      </div> -->
+
+      <ul class="header">
+         <li class="header header__left"> <a href="index.html" class="header header__link"> Fooþjónustan </a> </li>
+         <li class="header header__right"> <a href="um.html" class="header header__link"> Um </a> </li>
+         <li class="header header__right"> <a href="kaupa.html" class="header header__link"> Kaupa </a> </li>
+      </ul>
 
       <div class="row">
         <div class="col col-12">
