--- a/gogn/index.html
+++ b/gogn/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="is">
+<html lang="is" class="grid">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,21 +8,17 @@
   </head>
   <body>
     <main>
-      <!-- <div class="row">
-        <div class="col col-12">
-    			<div class="header">
-    				<a href="index.html"> <button class="button"> Fooþjónustan </button> </a>
-    				<a href="um.html"><button class="button"> Um </button> </a>
-    				<a href="kaupa.html"> <button class="button"> Kaupa </button> </a>
-    			</div>
-        </div>
-      </div> -->
 
-      <ul class="header">
-         <li class="header header__left"> <a href="index.html" class="header header__link"> Fooþjónustan </a> </li>
-         <li class="header header__right"> <a href="um.html" class="header header__link"> Um </a> </li>
-         <li class="header header__right"> <a href="kaupa.html" class="header header__link"> Kaupa </a> </li>
-      </ul>
+      <div class="row">
+        <div class="col col-12">
+          <ul class="header">
+             <li class="header__item header__item__left"> <a href="index.html" class="header__link"> Fooþjónustan </a> </li>
+             <li class="header__item header__item__right"> <a href="um.html" class="header__link"> Um </a> </li>
+             <li class="header__item header__item__right"> <a href="kaupa.html" class="header__link"> Kaupa </a> </li>
+          </ul>
+        </div>
+      </div>
+
 
       <div class="row">
         <div class="col col-12">
@@ -163,7 +159,6 @@
         </div>
 
       </section>
-
     </main>
   </body>
 </html>
